<resources>
    <string name="app_name">NGX Mobile Client</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NGX File Cloud</string>
    <string name="nav_header_subtitle">ngx.lfreedom.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- URLs -->
    <string name="url" translatable="false">http://ngx.cn</string>
    <string name="login_url" translatable="false">/api/v1/cloud/auth/signin</string>
    <string name="captcha_id_url" translatable="false">/api/v1/cloud/auth/captcha/request</string>
    <string name="captcha_url" translatable="false">/api/v1/cloud/auth/captcha/file/%1$s.png</string>
    <string name="sys_info_url" translatable="false">/api/v1/cloud/version</string>
    <string name="pc_info_url" translatable="false">/api/v1/cloud/app/hardware/host</string>
    <string name="cpu_info_url" translatable="false">/api/v1/cloud/app/hardware/cpu</string>
    <string name="mem_info_url" translatable="false">/api/v1/cloud/app/hardware/memory</string>
    <string name="cpu_usage_url" translatable="false">/api/v1/cloud/app/hardware/cpu/usage</string>
    <string name="mem_usage_url" translatable="false">/api/v1/cloud/app/hardware/memory/usage</string>
    <string name="disk_usage_url" translatable="false">/api/v1/cloud/app/browser/volumes</string>
    <string name="net_usage_url" translatable="false">/api/v1/cloud/app/hardware/network/usage</string>
    <string name="media_url" translatable="false">/api/v1/cloud/app/media/library/query</string>
    <string name="video_thumbnail_url" translatable="false">/api/v1/cloud/app/browser/thumbnail</string>
    <string name="video_download_url" translatable="false">/api/v1/cloud/app/browser/download?Src=//%1$s/%2$s&amp;Force=%3$s&amp;Authorization=%4$s</string>
    <string name="media_details_url" translatable="false">/api/v1/cloud/app/media/library/detail</string>
    <string name="media_find_dlna_url" translatable="false">/api/v1/cloud/app/dlna/render/query</string>
    <string name="media_set_dlna_url" translatable="false">/api/v1/cloud/app/dlna/render/cast</string>

    <!-- Navigation -->
    <string name="menu_media">Media</string>
    <string name="menu_folder">Disk</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_setting">应用服务</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">user name or password error</string>
    <string name="invalid_ip">Invalid address or domain name</string>
    <string name="invalid_port">Invalid port</string>

    <!-- Dashboard -->
    <string name="cpu">CPU</string>
    <string name="mem">Mem</string>
    <string name="disk">Disk</string>
    <string name="net">Net</string>
    <string name="tvSystemInfo" translatable="false">%1$s %2$s %3$s</string>
    <string name="tvCpuInfo" translatable="false">%1$sh %2$sg %3$s</string>
    <string name="tvNgxInfo1" translatable="false">ver.%1$s.%2$s.%3$s %4$s %5$s</string>

    <!-- Media -->
    <string name="media_tab_video">video</string>
    <string name="media_tab_music">music</string>
    <string name="media_tab_file">file</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_details_title">Filename: </string>
    <string name="tv_details_addr">Path: </string>
    <string name="tv_details_format">Format: </string>
    <string name="tv_details_duration">Duration: </string>
    <string name="tv_details_size">Size: </string>
    <string name="tv_details_create">CreationTime: </string>
    <string name="tv_details_videoformat">Video: </string>
    <string name="tv_details_audioformat">Audio: </string>
    <string name="tv_dlna_name">Name: </string>
    <string name="tv_dlna_host">Host: </string>
    <string name="btn_video_details_determine">Search</string>

    <string-array name="spinner">
        <item>Device one max pro</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>