<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/login_card_bg"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/ipadrr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/login_edittext_style"
                    android:ems="10"
                    android:hint="Server IP"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:theme="@style/LoginEditText"
                    app:layout_constraintEnd_toStartOf="@+id/port"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/port"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/login_edittext_style"
                    android:ems="10"
                    android:hint="Port"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:theme="@style/LoginEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ipadrr" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="@string/prompt_email"
                    android:background="@drawable/login_edittext_style"
                    android:drawableStart="@drawable/ic_user"
                    android:hint="@string/prompt_email"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:theme="@style/LoginEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ipadrr" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="@string/prompt_password"
                    android:background="@drawable/login_edittext_style"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:theme="@style/LoginEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/login_button_style"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/captcha" />

                <EditText
                    android:id="@+id/captcha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/login_edittext_style"
                    android:drawableStart="@drawable/ic_smile_small"
                    android:ems="6"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:theme="@style/LoginEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/Images_Captcha"
                    android:layout_width="90dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="#A6A6A6"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="@+id/captcha"
                    app:layout_constraintTop_toTopOf="@+id/captcha"
                    app:srcCompat="@drawable/ic_captcha" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>